--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   <title>Minecraft CV</title>
 </head>
 <body>
+  <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
+  
   <script src="../dist/bundle.js"></script>
 </body>
 </html>
