--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,18 @@
 </head>
 <body>
   <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
+
+  <div id="item-bar">
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   
   <script src="../dist/bundle.js"></script>
 </body>
