implemented new domes + pickaxe

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
   <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
+  <img id="pickaxe" src="../assets/pickaxe.webp" alt="pickaxe">
 
   <div id="item-bar">
     <div></div>
