added sounds type

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
   <title>Minecraft CV</title>
 </head>
 <body>
+  <!-- Accessories -->
   <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
   <img id="pickaxe" src="../assets/pickaxe.webp" alt="pickaxe">
 
+  <!-- Items -->
   <div id="item-bar">
     <div></div>
     <div></div>
@@ -22,6 +24,9 @@
     <div></div>
     <div></div>
   </div>
+
+  <!-- Sounds -->
+  <audio id="basic-place-break" src="../assets/sounds/basic-place-break.mp3"></audio>
   
   <script src="../dist/bundle.js"></script>
 </body>
