--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,16 @@
   </div>
 
   <!-- Sounds -->
-  <audio id="basic-place-break" src="../assets/sounds/basic-place-break.mp3"></audio>
+  <audio id="basic-place-break" src="../assets/sounds/basic-place-break.wav"></audio>
+  <audio id="button" src="../assets/sounds/button.wav"></audio>
+  <audio id="chest-close" src="../assets/sounds/chest-close.wav"></audio>
+  <audio id="chest-open" src="../assets/sounds/chest-open.wav"></audio>
+  <audio id="dirt-place-break" src="../assets/sounds/dirt-place-break.wav"></audio>
+  <audio id="glass-break" src="../assets/sounds/glass-break.mp3"></audio>
+  <audio id="grass-place-break" src="../assets/sounds/grass-place-break.mp3"></audio>
+  <audio id="sand-break" src="../assets/sounds/sand-break.wav"></audio>
+  <audio id="wood-break" src="../assets/sounds/wood-break.wav"></audio>
+  <audio id="wood-place" src="../assets/sounds/wood-place.wav"></audio>
   
   <script src="../dist/bundle.js"></script>
 </body>
