implemented main menu

--- a/public/index.html
+++ b/public/index.html
@@ -4,39 +4,36 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./index.css">
   <title>Minecraft CV</title>
+  <link rel="stylesheet" href="./index.css">
+  <link rel="stylesheet" href="./menu.css">
 </head>
 <body>
-  <!-- Accessories -->
-  <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
-  <img id="pickaxe" src="../assets/pickaxe.webp" alt="pickaxe">
-
-  <!-- Items -->
-  <div id="item-bar">
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
-    <div></div>
+  <base href="http://127.0.0.1:5500/public/">
+  
+  <div class="splash-container">
+    <div class="splash">Inspired by Notch, Made by Kamil!</div>
   </div>
 
-  <!-- Sounds -->
-  <audio id="basic-place-break" src="../assets/sounds/basic-place-break.wav"></audio>
-  <audio id="button" src="../assets/sounds/button.wav"></audio>
-  <audio id="chest-close" src="../assets/sounds/chest-close.wav"></audio>
-  <audio id="chest-open" src="../assets/sounds/chest-open.wav"></audio>
-  <audio id="dirt-place-break" src="../assets/sounds/dirt-place-break.wav"></audio>
-  <audio id="glass-break" src="../assets/sounds/glass-break.mp3"></audio>
-  <audio id="grass-place-break" src="../assets/sounds/grass-place-break.mp3"></audio>
-  <audio id="sand-break" src="../assets/sounds/sand-break.wav"></audio>
-  <audio id="wood-break" src="../assets/sounds/wood-break.wav"></audio>
-  <audio id="wood-place" src="../assets/sounds/wood-place.wav"></audio>
-  
-  <script src="../dist/bundle.js"></script>
+  <div class="spacer"></div>
+
+  <div class="buttons">
+    <a href="game.html" class="button-container">
+      <div class="button">Play</div>
+    </a>
+    <a href="https://www.github.com/kamilgeagea" class="button-container">
+      <div class="button">Back to Website</div>
+    </a>
+    <div id="music-button" class="button-container">
+      <div class="button">Music: On</div>
+    </div>
+  </div>
+
+  <div class="footer">
+    <div class="version">Minecraft CV 1.0.0</div>
+    <div class="copyright">I don't know how copyright works. Feel free to use it however you want.</div>
+  </div>
+
+  <script src="./main.js"></script>
 </body>
 </html>
