--- a/public/game.html
+++ b/public/game.html
@@ -5,28 +5,53 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
+  <link rel="icon" href="../assets/previews/grass.png">
   <title>Minecraft CV</title>
 </head>
 <body>
-  <!-- Accessories -->
-  <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
-  <img id="pickaxe" src="../assets/pickaxe.webp" alt="pickaxe">
+  <base href="http://127.0.0.1:5500/public/">
 
-  <!-- Items -->
-  <div id="item-bar"></div>
+  <div class="mobile">
+    <div class="mobile__text">This application is only available on desktop.</div>
+    <a href="https://www.github.com/kamilgeagea" class="button-container">
+      <div class="button">Back to Website</div>
+    </a>
+  </div>
 
-  <!-- Sounds -->
-  <audio id="basic-place-break" src="../assets/sounds/basic-place-break.wav"></audio>
-  <audio id="button" src="../assets/sounds/button.wav"></audio>
-  <audio id="chest-close" src="../assets/sounds/chest-close.wav"></audio>
-  <audio id="chest-open" src="../assets/sounds/chest-open.wav"></audio>
-  <audio id="dirt-place-break" src="../assets/sounds/dirt-place-break.wav"></audio>
-  <audio id="glass-break" src="../assets/sounds/glass-break.mp3"></audio>
-  <audio id="grass-place-break" src="../assets/sounds/grass-place-break.mp3"></audio>
-  <audio id="sand-break" src="../assets/sounds/sand-break.wav"></audio>
-  <audio id="wood-break" src="../assets/sounds/wood-break.wav"></audio>
-  <audio id="wood-place" src="../assets/sounds/wood-place.wav"></audio>
-  
-  <script src="../dist/bundle.js"></script>
+  <div class="content">
+    <!-- Game -->
+    <div id="game"></div>
+
+    <!-- Buttons -->
+    <div class="option-buttons">
+      <a href="index.html" id="exit-button" class="button-container">
+        <div class="button">Exit</div>
+      </a>
+      <div id="sound-button" class="button-container">
+        <div class="button">Sound: On</div>
+      </div>
+    </div>
+
+    <!-- Accessories -->
+    <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
+    <img id="pickaxe" src="../assets/pickaxe.webp" alt="pickaxe">
+
+    <!-- Items -->
+    <div id="item-bar"></div>
+
+    <!-- Sounds -->
+    <audio id="basic-place-break" src="../assets/sounds/basic-place-break.wav"></audio>
+    <audio id="button-click" src="../assets/sounds/button.wav"></audio>
+    <audio id="chest-close" src="../assets/sounds/chest-close.wav"></audio>
+    <audio id="chest-open" src="../assets/sounds/chest-open.wav"></audio>
+    <audio id="dirt-place-break" src="../assets/sounds/dirt-place-break.wav"></audio>
+    <audio id="glass-break" src="../assets/sounds/glass-break.mp3"></audio>
+    <audio id="grass-place-break" src="../assets/sounds/grass-place-break.mp3"></audio>
+    <audio id="sand-break" src="../assets/sounds/sand-break.wav"></audio>
+    <audio id="wood-break" src="../assets/sounds/wood-break.wav"></audio>
+    <audio id="wood-place" src="../assets/sounds/wood-place.wav"></audio>
+
+    <script src="../dist/bundle.js"></script>
+  </div>
 </body>
 </html>
