--- a/public/index.html
+++ b/public/index.html
@@ -7,33 +7,43 @@
   <title>Minecraft CV</title>
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./menu.css">
+  <link rel="icon" href="../assets/previews/grass.png">
 </head>
 <body>
   <base href="http://127.0.0.1:5500/public/">
-  
-  <div class="splash-container">
-    <div class="splash">Inspired by Notch, Made by Kamil!</div>
-  </div>
 
-  <div class="spacer"></div>
-
-  <div class="buttons">
-    <a href="game.html" class="button-container">
-      <div class="button">Play</div>
-    </a>
+  <div class="mobile">
+    <div class="mobile__text">This application is only available on desktop.</div>
     <a href="https://www.github.com/kamilgeagea" class="button-container">
       <div class="button">Back to Website</div>
     </a>
-    <div id="music-button" class="button-container">
-      <div class="button">Music: On</div>
+  </div>
+
+  <div class="content">
+    <div class="splash-container">
+      <div class="splash">Inspired by Notch, Made by Kamil!</div>
     </div>
+  
+    <div class="spacer"></div>
+  
+    <div class="buttons">
+      <a href="game.html" class="button-container">
+        <div class="button">Play</div>
+      </a>
+      <a href="https://www.github.com/kamilgeagea" class="button-container">
+        <div class="button">Back to Website</div>
+      </a>
+      <div id="music-button" class="button-container">
+        <div class="button">Music: On</div>
+      </div>
+    </div>
+  
+    <div class="footer">
+      <div class="version">Minecraft CV 1.0.0</div>
+      <div class="copyright">I don't know how copyright works. Feel free to use it however you want.</div>
+    </div>
+  
+    <script src="./main.js"></script>
   </div>
-
-  <div class="footer">
-    <div class="version">Minecraft CV 1.0.0</div>
-    <div class="copyright">I don't know how copyright works. Feel free to use it however you want.</div>
-  </div>
-
-  <script src="./main.js"></script>
 </body>
 </html>
