implemented information modals

--- a/public/game.html
+++ b/public/game.html
@@ -30,6 +30,16 @@
       <div id="sound-button" class="button-container">
         <div class="button">Sound: On</div>
       </div>
+      <a id="linkedin-link" href="https://linkedin.com/in/kamilgeagea" class="button-container" target="_blank">
+        <div class="button">
+          <img src="../assets/logos/linkedin-logo.jpeg" alt="LinkedIn">
+        </div>
+      </a>
+      <a id="github-link" href="https://github.com/kamilgeagea" class="button-container" target="_blank">
+        <div class="button">
+          <img src="../assets/logos/github-logo.png" alt="Github">
+        </div>
+      </a>
     </div>
 
     <!-- Accessories -->
@@ -50,6 +60,309 @@
     <audio id="sand-break" src="../assets/sounds/sand-break.wav"></audio>
     <audio id="wood-break" src="../assets/sounds/wood-break.wav"></audio>
     <audio id="wood-place" src="../assets/sounds/wood-place.wav"></audio>
+
+    <!-- Modals -->
+
+    <!-- Professional Experience -->
+    <div id="professional-experience-modal">
+      <div onclick="(arguments[0] || window.event).stopPropagation();" class="backdrop">
+        <div class="modal-container">
+          <div class="modal">
+            <div class="modal__container">
+              <div class="modal__container__header">
+                <div class="modal__container__header__title">Professional Experience</div>
+                <div class="button-container close_button">
+                  <div class="button">Close</div>
+                </div>
+              </div>
+              <div class="modal__container__content">
+                <div class="entity">
+                  <div class="title">Deloitte</div>
+                  <div class="secondary-title">Solution Developer</div>
+                  <div class="date-location">JAN 2022 - PRESENT / MONTREAL, QUEBEC, CANADA</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Participated in key activities such whithin the software implementation project life-cycle
+                        such as discovery, solution design, development, testing, and documentation
+                      </li>
+                      <li>
+                        Implemented full stack solutions with technologies such as HTML, Sass, Typescript, and Java whithin
+                        the Adobe Experience Manager infrastructure
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://www2.deloitte.com/ca/en.html" class="button-container" target="_blank">
+                      <div class="button">View Website</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">GIRO</div>
+                  <div class="secondary-title">Software Engineer Intern</div>
+                  <div class="date-location">SEP 2021 - DEC 2021 / MONTREAL, QUEBEC, CANADA</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Worked in an Agile Environment to develop a web app aiming at managing employees in the transportation
+                        industry
+                      </li>
+                      <li>
+                        Implemented solutions using React, Javascript, Sass, HTML and Jest
+                      </li>
+                      <li>
+                        Participated in the functional design, architecture, and organic analysis sessions
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://www.giro.ca/en-ca/" class="button-container" target="_blank">
+                      <div class="button">View Website</div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Education -->
+    <div id="education-modal">
+      <div onclick="(arguments[0] || window.event).stopPropagation();" class="backdrop">
+        <div class="modal-container">
+          <div class="modal">
+            <div class="modal__container">
+              <div class="modal__container__header">
+                <div class="modal__container__header__title">Education</div>
+                <div class="button-container close_button">
+                  <div class="button">Close</div>
+                </div>
+              </div>
+              <div class="modal__container__content">
+                <div class="entity">
+                  <div class="title">Concordia University</div>
+                  <div class="secondary-title">Bachelor's in Computer Science</div>
+                  <div class="date-location">SEP 2018 - AUG 2022 / MONTREAL, QUEBEC, CANADA</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Relevant Coursework: Databases - Data Structures and Algorithms - Artificial Intelligence - Big Data
+                        Analytics - Web Programming - Operating Systems - Information Retrieval - Theory of Computation
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://www.concordia.ca/" class="button-container" target="_blank">
+                      <div class="button">View Website</div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Personal Projects -->
+    <div id="personal-projects-modal">
+      <div onclick="(arguments[0] || window.event).stopPropagation();" class="backdrop">
+        <div class="modal-container">
+          <div class="modal">
+            <div class="modal__container">
+              <div class="modal__container__header">
+                <div class="modal__container__header__title">Personal Projects</div>
+                <div class="button-container close_button">
+                  <div class="button">Close</div>
+                </div>
+              </div>
+              <div class="modal__container__content">
+                <div class="entity">
+                  <div class="title">AI Visualizer</div>
+                  <div class="secondary-title">React - Typescript - Sass - Figma</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Created a web app that allows users to visualizer Machine Learning Algorithms such as Decision Trees, 
+                        K-Nearest-Neighbors, and K-Means
+                      </li>
+                      <li>
+                        Implemented the User Interface using React, Context API, and Sass
+                      </li>
+                      <li>
+                        Implemented time-efficient ML algorithms from scratch using Typescript
+                      </li>
+                      <li>
+                        Designed the application UI using Figma
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://kamilgeagea.github.io/ai-visualizer/" class="button-container" target="_blank">
+                      <div class="button">Demo</div>
+                    </a>
+                    <a href="https://github.com/kamilgeagea/ai-visualizer" class="button-container" target="_blank">
+                      <div class="button">Github</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">Minecraft CV</div>
+                  <div class="secondary-title">Typescript - ThreeJS - Webpack</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Created a Minecraft clone on web using ThreeJS, Webpack, and Typescript
+                      </li>
+                      <li>
+                        Implemented gameplay and physics from scratch using a Data Structures and Algorithms architecture
+                        aimed at maximizing efficiency to favor a 60 frames per second gameplay on modern browsers
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://github.com/kamilgeagea/minecraft" class="button-container" target="_blank">
+                      <div class="button">Github</div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Competitions -->
+    <div id="competitions-modal">
+      <div onclick="(arguments[0] || window.event).stopPropagation();" class="backdrop">
+        <div class="modal-container">
+          <div class="modal">
+            <div class="modal__container">
+              <div class="modal__container__header">
+                <div class="modal__container__header__title">Competitions</div>
+                <div class="button-container close_button">
+                  <div class="button">Close</div>
+                </div>
+              </div>
+              <div class="modal__container__content">
+                <div class="entity">
+                  <div class="title">McHacks 2022 - Hackathon</div>
+                  <div class="secondary-title">Winner of the Best Use of the Huawei Ascend AI Platform Challenge</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Participated as a team of 4 in a 36 hour long Hackathon presented by McGill University
+                      </li>
+                      <li>
+                        Created a Mobile Application that detects recyclable items with Object Recognition using React 
+                        Native, Tensorflow, and Keras
+                      </li>
+                      <li>
+                        Won the main sponsor Huawei's challenge: Best use of the Huawei Ascend AI Platform
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://devpost.com/software/recyclable-if-in-doubt-keep-it-out"
+                      class="button-container" target="_blank">
+                      <div class="button">Details</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">PolyHacks - Hackatown 2022</div>
+                  <div class="secondary-title">Winner of the MLH Best Hardware Hack sponsored by Digi-Key</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Participated as a team of 3 in a 36 hour long Hackathon presented by the University of Montreal (UdeM)
+                      </li>
+                      <li>
+                        Created a Web Application that displays the Index of Pollution around the city using sensors generated
+                        data using React, Typescript, and Arduino
+                      </li>
+                      <li>
+                        Won the MLH Best Hardware Hack sponsored by Digi-Key
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://devpost.com/software/citybike-zrf9li"
+                      class="button-container" target="_blank">
+                      <div class="button">Details</div>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Leaderhsip -->
+    <div id="leadership-modal">
+      <div onclick="(arguments[0] || window.event).stopPropagation();" class="backdrop">
+        <div class="modal-container">
+          <div class="modal">
+            <div class="modal__container">
+              <div class="modal__container__header">
+                <div class="modal__container__header__title">Leadership</div>
+                <div class="button-container close_button">
+                  <div class="button">Close</div>
+                </div>
+              </div>
+              <div class="entity">
+                <div class="title">Concordia University Music Collaboration Club Vice-President</div>
+                <div class="description">
+                  <ul>
+                    <li>
+                      Co-created the Music Collaboration Club at Concordia University
+                    </li>
+                    <li>
+                      Organized workshops around music composition and performance, as well as social gatherings where people
+                      could meet and collaborate
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Hobbies -->
+    <div id="hobbies-modal">
+      <div onclick="(arguments[0] || window.event).stopPropagation();" class="backdrop">
+        <div class="modal-container">
+          <div class="modal">
+            <div class="modal__container">
+              <div class="modal__container__header">
+                <div class="modal__container__header__title">Hobbies</div>
+                <div class="button-container close_button">
+                  <div class="button">Close</div>
+                </div>
+              </div>
+              <div class="modal__container__content">
+                <div class="description">
+                  <ul>
+                    <li>Programming (Web, AI, Blockchain)</li>
+                    <li>Music Production</li>
+                    <li>Sports (Formula 1, Soccer, Tennis, Fitness, Hiking)</li>
+                    <li>Gaming (League of Legends, Overwatch, BOTW)</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="../dist/bundle.js"></script>
   </div>
