changed file structure

--- a/game.html
+++ b/game.html
@@ -5,11 +5,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./index.css">
-  <link rel="icon" href="../assets/previews/grass.png">
+  <link rel="icon" href="./assets/previews/grass.png">
   <title>Minecraft CV</title>
 </head>
 <body>
-  <base href="http://127.0.0.1:5500/public/">
+  <base href="https://kamilgeagea.github.io/minecraft/">
 
   <div class="mobile">
     <div class="mobile__text">This application is only available on desktop.</div>
@@ -32,34 +32,34 @@
       </div>
       <a id="linkedin-link" href="https://linkedin.com/in/kamilgeagea" class="button-container" target="_blank">
         <div class="button">
-          <img src="../assets/logos/linkedin-logo.jpeg" alt="LinkedIn">
+          <img src="./assets/logos/linkedin-logo.jpeg" alt="LinkedIn">
         </div>
       </a>
       <a id="github-link" href="https://github.com/kamilgeagea" class="button-container" target="_blank">
         <div class="button">
-          <img src="../assets/logos/github-logo.png" alt="Github">
+          <img src="./assets/logos/github-logo.png" alt="Github">
         </div>
       </a>
     </div>
 
     <!-- Accessories -->
-    <img id="crosshair" src="../assets/crosshair.png" alt="crosshair">
-    <img id="pickaxe" src="../assets/pickaxe.webp" alt="pickaxe">
+    <img id="crosshair" src="./assets/crosshair.png" alt="crosshair">
+    <img id="pickaxe" src="./assets/pickaxe.webp" alt="pickaxe">
 
     <!-- Items -->
     <div id="item-bar"></div>
 
     <!-- Sounds -->
-    <audio id="basic-place-break" src="../assets/sounds/basic-place-break.wav"></audio>
-    <audio id="button-click" src="../assets/sounds/button.wav"></audio>
-    <audio id="chest-close" src="../assets/sounds/chest-close.wav"></audio>
-    <audio id="chest-open" src="../assets/sounds/chest-open.wav"></audio>
-    <audio id="dirt-place-break" src="../assets/sounds/dirt-place-break.wav"></audio>
-    <audio id="glass-break" src="../assets/sounds/glass-break.mp3"></audio>
-    <audio id="grass-place-break" src="../assets/sounds/grass-place-break.mp3"></audio>
-    <audio id="sand-break" src="../assets/sounds/sand-break.wav"></audio>
-    <audio id="wood-break" src="../assets/sounds/wood-break.wav"></audio>
-    <audio id="wood-place" src="../assets/sounds/wood-place.wav"></audio>
+    <audio id="basic-place-break" src="./assets/sounds/basic-place-break.wav"></audio>
+    <audio id="button-click" src="./assets/sounds/button.wav"></audio>
+    <audio id="chest-close" src="./assets/sounds/chest-close.wav"></audio>
+    <audio id="chest-open" src="./assets/sounds/chest-open.wav"></audio>
+    <audio id="dirt-place-break" src="./assets/sounds/dirt-place-break.wav"></audio>
+    <audio id="glass-break" src="./assets/sounds/glass-break.mp3"></audio>
+    <audio id="grass-place-break" src="./assets/sounds/grass-place-break.mp3"></audio>
+    <audio id="sand-break" src="./assets/sounds/sand-break.wav"></audio>
+    <audio id="wood-break" src="./assets/sounds/wood-break.wav"></audio>
+    <audio id="wood-place" src="./assets/sounds/wood-place.wav"></audio>
 
     <!-- Modals -->
 
@@ -364,7 +364,7 @@
       </div>
     </div>
 
-    <script src="../dist/bundle.js"></script>
+    <script src="./dist/bundle.js"></script>
   </div>
 </body>
 </html>
