--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Minecraft CV</title>
   <link rel="stylesheet" href="./index.css">
   <link rel="stylesheet" href="./menu.css">
-  <link rel="icon" href="../assets/previews/grass.png">
+  <link rel="icon" href="./assets/previews/grass.png">
 </head>
 <body>
-  <base href="http://127.0.0.1:5500/public/">
+  <base href="https://kamilgeagea.github.io/minecraft/">
 
   <div class="mobile">
     <div class="mobile__text">This application is only available on desktop.</div>
