--- a/game.html
+++ b/game.html
@@ -83,7 +83,7 @@
                   <div class="description">
                     <ul>
                       <li>
-                        Participated in key activities such whithin the software implementation project life-cycle
+                        Participated in key activities whithin the software implementation project life-cycle
                         such as discovery, solution design, development, testing, and documentation
                       </li>
                       <li>
