updated personal projects section

--- a/game.html
+++ b/game.html
@@ -190,10 +190,10 @@
                         K-Nearest-Neighbors, and K-Means
                       </li>
                       <li>
-                        Implemented the User Interface using React, Context API, and Sass
+                        Implemented optimized Machine Learning algorithms from scratch using Typescript
                       </li>
                       <li>
-                        Implemented time-efficient ML algorithms from scratch using Typescript
+                        Built the User Interface using React, Context API, and Sass
                       </li>
                       <li>
                         Designed the application UI using Figma
@@ -205,6 +205,35 @@
                       <div class="button">Demo</div>
                     </a>
                     <a href="https://github.com/kamilgeagea/ai-visualizer" class="button-container" target="_blank">
+                      <div class="button">Github</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">Signly</div>
+                  <div class="secondary-title">Typescript - Python - Tensorflow - OpenCV - React</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        A Web App that uses object recognition to detect sign language. It contains interactive mini-games teaching ASL through Artificial
+                        Intelligence
+                      </li>
+                      <li>
+                        Implemented a detection model with a loss of 0.07 with a dataset of over 520 images using Tensorflow, OpenCV, and Python
+                      </li>
+                      <li>
+                        Integrated the model into the web app with TensorflowJS and built a real time object detection system using custom React Hooks
+                      </li>
+                      <li>
+                        Built the User Interface using React, Typescript, Context API, and Sass
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://kamilgeagea.github.io/signly/" class="button-container" target="_blank">
+                      <div class="button">Demo</div>
+                    </a>
+                    <a href="https://github.com/kamilgeagea/signly" class="button-container" target="_blank">
                       <div class="button">Github</div>
                     </a>
                   </div>
