--- a/game.html
+++ b/game.html
@@ -83,12 +83,10 @@
                   <div class="description">
                     <ul>
                       <li>
-                        Participated in key activities whithin the software implementation project life-cycle
-                        such as discovery, solution design, development, testing, and documentation
+                        Participation in key steps within the Software implementation of the project lifecycle such as Discovery, Solution Design, Development, Testing, and Documentation.
                       </li>
                       <li>
-                        Implemented full stack solutions with technologies such as HTML, Sass, Typescript, and Java whithin
-                        the Adobe Experience Manager infrastructure
+                        Implementation of Full-Stack solutions with AEM, Java, TypeScript, HTML, and CSS
                       </li>
                     </ul>
                   </div>
@@ -105,14 +103,13 @@
                   <div class="description">
                     <ul>
                       <li>
-                        Worked in an Agile Environment to develop a web app aiming at managing employees in the transportation
-                        industry
+                        Participated in the development of a web app aimed at managing employees in the transportation industry
                       </li>
                       <li>
-                        Implemented solutions using React, Javascript, Sass, HTML and Jest
+                        Implemented performant and accessible components using React and JavaScript
                       </li>
                       <li>
-                        Participated in the functional design, architecture, and organic analysis sessions
+                        Worked in an Agile environment and participated in functional design, architecture, and organic analysis sessions
                       </li>
                     </ul>
                   </div>
@@ -149,13 +146,29 @@
                   <div class="description">
                     <ul>
                       <li>
-                        Relevant Coursework: Databases - Data Structures and Algorithms - Artificial Intelligence - Big Data
-                        Analytics - Web Programming - Operating Systems - Information Retrieval - Theory of Computation
+                        Coursework: Machine Learning, Artificial Intelligence, Big Data Analytics, Information Retrieval & Web Search, Operating Systems, Data Structures & Algorithms, Databases, Theoretical Computer Science
                       </li>
                     </ul>
                   </div>
                   <div class="links">
                     <a href="https://www.concordia.ca/" class="button-container" target="_blank">
+                      <div class="button">View Website</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">Grand Lycée Franco-Libanais Beyrouth</div>
+                  <div class="secondary-title">Scientific French Baccalaureate</div>
+                  <div class="date-location">SEP 2005 - JUN 2017 / BEIRUT, LEBANON</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Graduated with a Scientific French Baccalaureate
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://en.wikipedia.org/wiki/Grand_Lyc%C3%A9e_Franco-Libanais" class="button-container" target="_blank">
                       <div class="button">View Website</div>
                     </a>
                   </div>
@@ -186,17 +199,13 @@
                   <div class="description">
                     <ul>
                       <li>
-                        Created a web app that allows users to visualizer Machine Learning Algorithms such as Decision Trees, 
-                        K-Nearest-Neighbors, and K-Means
+                        Built a platform that allows users to visualize Machine Learning algorithms step by step using React
                       </li>
                       <li>
-                        Implemented optimized Machine Learning algorithms from scratch using Typescript
+                        Implemented Machine Learning algorithms such as Decision Tree, KNN, and KMeans from scratch using TypeScript
                       </li>
                       <li>
-                        Built the User Interface using React, Context API, and Sass
-                      </li>
-                      <li>
-                        Designed the application UI using Figma
+                        Developed a customizable 2-dimensional user-generated visualizer using React and Context API
                       </li>
                     </ul>
                   </div>
@@ -215,17 +224,13 @@
                   <div class="description">
                     <ul>
                       <li>
-                        A Web App that uses object recognition to detect sign language. It contains interactive mini-games teaching ASL through Artificial
-                        Intelligence
+                        Built a Real-Time Object Recognition detector that teaches Sign Language in an interactive way
                       </li>
                       <li>
-                        Implemented a detection model with a loss of 0.07 with a dataset of over 520 images using Tensorflow, OpenCV, and Python
+                        Trained an R-CNN model on a dataset of over 150 images resulting in a loss of 0.099 using Tensorflow and Python
                       </li>
                       <li>
-                        Integrated the model into the web app with TensorflowJS and built a real time object detection system using custom React Hooks
-                      </li>
-                      <li>
-                        Built the User Interface using React, Typescript, Context API, and Sass
+                        Implemented the trained model into a real-time sign language detector web application using React, TensorflowJS, and TypeScript
                       </li>
                     </ul>
                   </div>
@@ -244,16 +249,53 @@
                   <div class="description">
                     <ul>
                       <li>
-                        Created a Minecraft clone on web using ThreeJS, Webpack, and Typescript
+                        Built a Minecraft clone with ThreeJS implementing optimized physics and collision algorithms using TypeScript
                       </li>
                       <li>
-                        Implemented gameplay and physics from scratch using a Data Structures and Algorithms architecture
-                        aimed at maximizing efficiency to favor a 60 frames per second gameplay on modern browsers
+                        Programmed an infinite world generator module using Perline Noise
                       </li>
                     </ul>
                   </div>
                   <div class="links">
                     <a href="https://github.com/kamilgeagea/minecraft" class="button-container" target="_blank">
+                      <div class="button">Github</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">Algorithmic Trading Strategies</div>
+                  <div class="secondary-title">Python - Pandas - Scipy</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Designed a Momentum Strategy calculating stocks' HQM score based on return percentiles using Python, Scipy, and Pandas
+                      </li>
+                      <li>
+                        Implemented a Quantitative Value Strategy recommending stocks pending on their Robust Value Scores using multiple metrics such as Price-to-Earning ratio, Price-to-Book ratio, Enterprise Value to Earnings Before Interest, Taxes, Depreciation, and Amortization ratio
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://github.com/kamilgeagea/algorithmic-trading-strategies" class="button-container" target="_blank">
+                      <div class="button">Github</div>
+                    </a>
+                  </div>
+                </div>
+                <div class="entity">
+                  <div class="title">Android APK Malware Detector</div>
+                  <div class="secondary-title">Python - Pandas - Scikit-Learn - Matplotlib</div>
+                  <div class="description">
+                    <ul>
+                      <li>
+                        Trained Random Forest, MLP, Naive-Bayes, and SVM models on a dataset of 8,000 APKs using Python, Pandas, and Scikit-Learn
+                      </li>
+                      <li>
+                        Detected whether an APK is malicious or not with an accuracy of 93% and an F1 score of 92% on a test dataset of 2,000 APKs
+                      </li>
+                    </ul>
+                  </div>
+                  <div class="links">
+                    <a href="https://github.com/kamilgeagea/android-apk-malware-analysis" class="button-container" target="_blank">
                       <div class="button">Github</div>
                     </a>
                   </div>
@@ -279,19 +321,12 @@
               </div>
               <div class="modal__container__content">
                 <div class="entity">
-                  <div class="title">McHacks 2022 - Hackathon</div>
-                  <div class="secondary-title">Winner of the Best Use of the Huawei Ascend AI Platform Challenge</div>
+                  <div class="title">McHacks 2022 - 1st Prize in Huawei's Challenge: Best use of the Huawei Ascend AI Platform</div>
+                  <div class="secondary-title">Won the 1st prize in Huawei's challenge: Best use of the Huawei Ascend AI Platform</div>
                   <div class="description">
                     <ul>
                       <li>
-                        Participated as a team of 4 in a 36 hour long Hackathon presented by McGill University
-                      </li>
-                      <li>
-                        Created a Mobile Application that detects recyclable items with Object Recognition using React 
-                        Native, Tensorflow, and Keras
-                      </li>
-                      <li>
-                        Won the main sponsor Huawei's challenge: Best use of the Huawei Ascend AI Platform
+                        Built a mobile application that detects whether an object is recyclable or not using React Native, TypeScript, Python, and Keras
                       </li>
                     </ul>
                   </div>
@@ -303,19 +338,12 @@
                   </div>
                 </div>
                 <div class="entity">
-                  <div class="title">PolyHacks - Hackatown 2022</div>
-                  <div class="secondary-title">Winner of the MLH Best Hardware Hack sponsored by Digi-Key</div>
+                  <div class="title">Hackatown 2022 - 1st prize in MLH's challenge: Best Hardware Hack Sponsored by Digikey</div>
+                  <div class="secondary-title">Won the 1st prize in MLH's challenge: Best Hardware Hack Sponsored by Digikey</div>
                   <div class="description">
                     <ul>
                       <li>
-                        Participated as a team of 3 in a 36 hour long Hackathon presented by the University of Montreal (UdeM)
-                      </li>
-                      <li>
-                        Created a Web Application that displays the Index of Pollution around the city using sensors generated
-                        data using React, Typescript, and Arduino
-                      </li>
-                      <li>
-                        Won the MLH Best Hardware Hack sponsored by Digi-Key
+                        Built a web application that indicates CO2 levels in the city of Montreal using sensor data with React, NodeJS, and Arduino
                       </li>
                     </ul>
                   </div>
@@ -350,11 +378,10 @@
                 <div class="description">
                   <ul>
                     <li>
-                      Co-created the Music Collaboration Club at Concordia University
+                      Co-created the Music Collaboration Club at Concordia University gathering over 90 students
                     </li>
                     <li>
-                      Organized workshops around music composition and performance, as well as social gatherings where people
-                      could meet and collaborate
+                      Organized music composition workshops with local professionals and planned social gatherings aimed at promoting collaboration between members
                     </li>
                   </ul>
                 </div>
